--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "framer-motion": "^12.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0",
-    "react-player": "^2.16.0"
+    "react-icons": "^5.5.0",
+    "react-player": "^2.16.0",
+    "react-router-dom": "^7.5.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
